@@ -38,10 +38,16 @@ Sets an option that is specific to the particular optimizer used in the back-end
 The name of the option is the \sQuote{key} argument. Use value = NULL to remove 
 an existing option. Before the model is submitted to the back-end, all keys and 
 values are converted into strings using the \link{as.character} function. To reset
-all options to their default values, use reset = TRUE. If reset = TRUE, then 'key'
-and 'value' are ignored. To set the default optimizer options, use the value 
+all options to their default values, use reset = TRUE. If reset = TRUE, then \sQuote{key}
+and \sQuote{value} are ignored. To set the default optimizer options, use the value 
 NULL for the \sQuote{model} argument. Use \code{getOption('mxOptions')} to see the default 
 optimizer options.
+
+The maximum number of major iterations for the NPSOL optimization (the option 
+\dQuote{Major iterations}) can be specified either by using a 
+numeric value (such as 50, 1000, etc) or by specifying a user-defined function.
+The user-defined function should accept two arguments as input, the number of 
+parameters and the number of constraints, and return a numeric value as output.
 
 OpenMx options
 
@@ -62,7 +68,7 @@ Summary file \tab \var{i} \tab for \var{i} > 0 a brief log will be output to fil
 Function precision \tab \var{r} \tab a measure of accuracy with which \var{f} and \var{c} can be computed. \cr
 Infinite bound size \tab \var{r} \tab if \var{r} > 0 defines the "infinite" bound bigbnd. \cr 
 Feasibility tolerance \tab \var{r} \tab the maximum acceptable absolute violations in linear and nonlinear constraints. \cr
-Major iterations \tab \var{i} \tab the maximum number of major iterations before termination. \cr
+Major iterations \tab \var{i} or a function \tab the maximum number of major iterations before termination. \cr
 Verify level \tab [-1:3|Yes|No] \tab see NPSOL manual. \cr
 Line search tolerance \tab \var{r} \tab controls the accuracy with which a step is taken. \cr
 Derivative level \tab [0-3] \tab see NPSOL manual. \cr
