@@ -17,6 +17,7 @@ trunk
 * improved error messages in mxOption()
 * bugfix to omxRAMtoML() when input model has covariance data
 * implemented cov2cor in the OpenMx backend
+* mxOption "Major iterations" accepts either a value or a function
 
 Release 1.2.3-2011 (April 10, 2012)
 ===================================
